--- a/app/views/ideas/index.html
+++ b/app/views/ideas/index.html
@@ -12,7 +12,17 @@
   <h1>Ideabox Revisited <small>A JavaScript Nightmare by Sekhar P.</small></h1>
 </div>
 
-<%= Idea.first.to_json %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4">
+      <h3>Latest Ideas</h3>
+      <div id="latest-ideas">
+      </div>
+    </div>
+    <div class="col-sm-2"></div>
+  </div>
+</div>
 
 </body>
 </html>
