--- a/app/views/ideas/index.html
+++ b/app/views/ideas/index.html
@@ -2,14 +2,27 @@
 <html>
 <head>
   <title>Ideabox JS</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
 <div class="page-header">
   <h1>Ideabox Revisited <small>A JavaScript Nightmare by Sekhar P.</small></h1>
+</div>
+
+<div class="row">
+  <div class="col-sm-2"></div>
+  <div class="col-sm-8">
+    <hr>
+    <div class="form-group">
+      Title: <input class="form-control" type="text" id="idea-title">
+      Body: <input class="form-control" type="text" id="idea-body">
+    </div>
+    <input class="btn btn-default pull-right" id="create-idea" type="button" name="submit" value="Create Idea">
+  </div>
+  <div class="col-sm-2"></div>
 </div>
 
 <div class="container-fluid">
