--- a/app/views/ideas/index.html
+++ b/app/views/ideas/index.html
@@ -25,6 +25,15 @@
   <div class="col-sm-2"></div>
 </div>
 
+<div class="col-md-offset-5">
+  <h1>Idea Search</h1>
+  <form class="navbar-form navbar-left" role="search">
+    <div class="form-group">
+      <input type="text" class="form-control" id="filter" placeholder="Search">
+    </div>
+  </form><br><br>
+</div><br><br>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-2"></div>
