--- a/app/views/ideas/index.html
+++ b/app/views/ideas/index.html
@@ -15,8 +15,7 @@
 <div class="row">
   <div class="col-sm-2"></div>
   <div class="col-sm-8">
-    <hr>
-    <div class="form-group">
+    <div class="idea-form-group">
       Title: <input class="form-control" type="text" id="idea-title">
       Body: <input class="form-control" type="text" id="idea-body">
     </div>
